# food_vision

./: Makefile  README.md  setup.py
.ipynb_checkpoints/: setup-checkpoint.py
food_vision/: .gitignore  pyproject.toml
food_vision/config/: config.py
food_vision/model_definition/: model.py
food_vision/trained_models/trained_model/: keras_metadata.pb
food_vision/trained_models/trained_model/variables/: variables.index
food_vision/training_and_prediction/: train_pipeline.py
food_vision/utils/: callback_utils.py  evaluation_utils.py  preprocessing_utils.py
notebooks/: food_vision.ipynb
notebooks/.ipynb_checkpoints/: food_vision-checkpoint.ipynb
notebooks/model_checkpoints/trained_model/: keras_metadata.pb
notebooks/model_checkpoints/trained_model/variables/: variables.index
notebooks/model_checkpoints/trained_model_b2/: keras_metadata.pb
notebooks/model_checkpoints/trained_model_b2/variables/: variables.index
notebooks/training_logs/efficientb0_101_classes_all_data_fine_tuning/20211229-184033/train/: events.out.tfevents.1640832033.Bowens-MBP.attlocal.net.87435.0.v2
notebooks/training_logs/efficientb0_101_classes_all_data_fine_tuning/20211229-185813/train/: events.out.tfevents.1640833093.Bowens-MBP.attlocal.net.87435.1.v2
notebooks/tuned_model_checkpoints/trained_model/: keras_metadata.pb
notebooks/tuned_model_checkpoints/trained_model/variables/: variables.index
notebooks/tuned_model_checkpoints/trained_model_b2/: keras_metadata.pb
notebooks/tuned_model_checkpoints/trained_model_b2/variables/: variables.index
(+67 files in other folders)
